--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ IS Project Proposal Vega Sobral Víctor.pdf
 # Excluir datos y caché
 data/
 f1_cache/
+f1-dataset/
 
 # Excluir archivos de entorno virtual y IDE
 venv/
