--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ antlr4-python3-runtime==4.9.3
 astroid==3.3.8
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
 attrs==25.3.0
+audioread==3.0.1
 autopep8==2.0.4
 blis==1.2.0
 catalogue==2.0.10
 cattrs==24.1.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
@@ -51,7 +53,10 @@ jupyterlab_widgets==3.0.13
 kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
+lazy_loader==0.4
+librosa==0.11.0
 lightgbm==4.6.0
+llvmlite==0.44.0
 marisa-trie==1.2.1
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -60,13 +65,17 @@ matplotlib==3.10.1
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
 mccabe==0.7.0
 mdurl==0.1.2
+more-itertools==10.6.0
 mpmath==1.3.0
+msgpack==1.1.0
 murmurhash==1.0.12
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
 networkx==3.4.2
 nltk==3.9.1
-numpy==2.2.4
+numba==0.61.0
+numpy==2.1.3
 omegaconf==2.3.0
+openai-whisper==20240930
 opencv-python==4.7.0
 opencv-python-headless==4.11.0.86
 packaging==24.2
@@ -77,6 +86,7 @@ pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733
 pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
+pooch==1.8.2
 preshed==3.0.9
 prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
 protobuf==6.30.1
@@ -85,6 +95,7 @@ pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_17335694
 py-cpuinfo==9.0.0
 pyarrow==19.0.1
 pycodestyle==2.12.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydocstyle==6.3.0
@@ -118,6 +129,8 @@ six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
 smart-open==7.1.0
 smmap==5.0.2
 snowballstemmer==2.2.0
+soundfile==0.13.1
+soxr==0.5.0.post1
 spacy==3.8.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
@@ -132,6 +145,7 @@ tensorboard-data-server==0.7.2
 thinc==8.3.4
 thop==0.1.1.post2209072238
 threadpoolctl==3.6.0
+tiktoken==0.9.0
 timple==0.1.8
 tokenizers==0.21.1
 tomli==2.2.1
