--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,12 @@ idna=3.4=pypi_0
 importlib-metadata=8.6.1=pyha770c72_0
 ipykernel=6.29.5=pyh4bbf305_0
 ipython=8.34.0=pyh9ab4c32_0
+ipywidgets=8.1.5=pypi_0
 jedi=0.19.2=pyhd8ed1ab_1
 jinja2=3.1.4=pypi_0
 jupyter_client=8.6.3=pyhd8ed1ab_1
 jupyter_core=5.7.2=pyh5737063_1
+jupyterlab-widgets=3.0.13=pypi_0
 kiwisolver=1.4.8=pypi_0
 krb5=1.21.3=hdf4eb48_0
 langcodes=3.5.0=pypi_0
@@ -88,6 +90,7 @@ shellingham=1.5.4=pypi_0
 six=1.17.0=pyhd8ed1ab_0
 smart-open=7.1.0=pypi_0
 spacy=3.8.4=pypi_0
+spacy-annotator=2.1.4=pypi_0
 spacy-legacy=3.0.12=pypi_0
 spacy-loggers=1.0.5=pypi_0
 sqlite=3.45.3=h2bbff1b_0
@@ -116,6 +119,7 @@ wasabi=1.1.3=pypi_0
 wcwidth=0.2.13=pyhd8ed1ab_1
 weasel=0.4.1=pypi_0
 wheel=0.45.1=py310haa95532_0
+widgetsnbextension=4.0.13=pypi_0
 wrapt=1.17.2=pypi_0
 xz=5.6.4=h4754444_1
 zeromq=4.3.5=ha9f60a1_7
