--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-64
 # created-by: conda 24.11.3
+aiohappyeyeballs=2.6.1=pypi_0
+aiohttp=3.11.14=pypi_0
+aiosignal=1.3.2=pypi_0
 annotated-types=0.7.0=pypi_0
 asttokens=3.0.0=pyhd8ed1ab_1
+async-timeout=5.0.1=pypi_0
+attrs=25.3.0=pypi_0
 blis=1.2.0=pypi_0
 bzip2=1.0.8=h2bbff1b_6
 ca-certificates=2025.2.25=haa95532_0
@@ -21,14 +26,18 @@ cupy-cuda12x=12.3.0=pypi_0
 cupy-wheel=12.3.0=pypi_0
 cycler=0.12.1=pypi_0
 cymem=2.0.11=pypi_0
+datasets=3.4.1=pypi_0
 debugpy=1.8.13=py310h9e98ed7_0
 decorator=5.2.1=pyhd8ed1ab_0
+dill=0.3.8=pypi_0
 exceptiongroup=1.2.2=pyhd8ed1ab_1
 executing=2.1.0=pyhd8ed1ab_1
 fastrlock=0.8.3=pypi_0
 filelock=3.13.1=pypi_0
 fonttools=4.56.0=pypi_0
+frozenlist=1.5.0=pypi_0
 fsspec=2024.6.1=pypi_0
+huggingface-hub=0.29.3=pypi_0
 idna=3.4=pypi_0
 importlib-metadata=8.6.1=pyha770c72_0
 ipykernel=6.29.5=pyh4bbf305_0
@@ -36,6 +45,7 @@ ipython=8.34.0=pyh9ab4c32_0
 ipywidgets=8.1.5=pypi_0
 jedi=0.19.2=pyhd8ed1ab_1
 jinja2=3.1.4=pypi_0
+joblib=1.4.2=pypi_0
 jupyter_client=8.6.3=pyhd8ed1ab_1
 jupyter_core=5.7.2=pyh5737063_1
 jupyterlab-widgets=3.0.13=pypi_0
@@ -52,6 +62,8 @@ matplotlib=3.10.1=pypi_0
 matplotlib-inline=0.1.7=pyhd8ed1ab_1
 mdurl=0.1.2=pypi_0
 mpmath=1.3.0=pypi_0
+multidict=6.2.0=pypi_0
+multiprocess=0.70.16=pypi_0
 murmurhash=1.0.12=pypi_0
 nest-asyncio=1.6.0=pyhd8ed1ab_1
 networkx=3.3=pypi_0
@@ -67,9 +79,12 @@ pip=25.0=py310haa95532_0
 platformdirs=4.3.7=pyh29332c3_0
 preshed=3.0.9=pypi_0
 prompt-toolkit=3.0.50=pyha770c72_0
+propcache=0.3.0=pypi_0
+protobuf=6.30.1=pypi_0
 psutil=7.0.0=py310ha8f682b_0
 pure_eval=0.2.3=pyhd8ed1ab_1
 py-cpuinfo=9.0.0=pypi_0
+pyarrow=19.0.1=pypi_0
 pydantic=2.10.6=pypi_0
 pydantic-core=2.27.2=pypi_0
 pygments=2.19.1=pyhd8ed1ab_0
@@ -81,10 +96,14 @@ pytz=2025.1=pypi_0
 pywin32=307=py310h9e98ed7_3
 pyyaml=6.0.2=pypi_0
 pyzmq=26.3.0=py310h656833d_0
-requests=2.28.1=pypi_0
+regex=2024.11.6=pypi_0
+requests=2.32.3=pypi_0
 rich=13.9.4=pypi_0
+safetensors=0.5.3=pypi_0
+scikit-learn=1.6.1=pypi_0
 scipy=1.15.2=pypi_0
 seaborn=0.13.2=pypi_0
+seqeval=1.2.2=pypi_0
 setuptools=75.8.0=py310haa95532_0
 shellingham=1.5.4=pypi_0
 six=1.17.0=pyhd8ed1ab_0
@@ -98,13 +117,17 @@ srsly=2.5.1=pypi_0
 stack_data=0.6.3=pyhd8ed1ab_1
 sympy=1.13.1=pypi_0
 thinc=8.3.4=pypi_0
+threadpoolctl=3.6.0=pypi_0
+tiktoken=0.9.0=pypi_0
 tk=8.6.14=h0416ee5_0
+tokenizers=0.21.1=pypi_0
 torch=2.5.1+cu124=pypi_0
 torchaudio=2.5.1+cu124=pypi_0
 torchvision=0.20.1+cu124=pypi_0
 tornado=6.4.2=py310ha8f682b_0
 tqdm=4.67.1=pypi_0
 traitlets=5.14.3=pyhd8ed1ab_1
+transformers=4.50.0=pypi_0
 typer=0.15.2=pypi_0
 typing_extensions=4.12.2=pyha770c72_1
 tzdata=2025.2=pypi_0
@@ -121,7 +144,9 @@ weasel=0.4.1=pypi_0
 wheel=0.45.1=py310haa95532_0
 widgetsnbextension=4.0.13=pypi_0
 wrapt=1.17.2=pypi_0
+xxhash=3.5.0=pypi_0
 xz=5.6.4=h4754444_1
+yarl=1.18.3=pypi_0
 zeromq=4.3.5=ha9f60a1_7
 zipp=3.21.0=pyhd8ed1ab_1
 zlib=1.2.13=h8cc25b3_1
