--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,27 @@ aiohappyeyeballs=2.6.1=pypi_0
 aiohttp=3.11.14=pypi_0
 aiosignal=1.3.2=pypi_0
 annotated-types=0.7.0=pypi_0
+anyio=4.9.0=pyh29332c3_0
+argon2-cffi=23.1.0=pyhd8ed1ab_1
+argon2-cffi-bindings=21.2.0=py310ha8f682b_5
+arrow=1.3.0=pyhd8ed1ab_1
 asttokens=3.0.0=pyhd8ed1ab_1
+async-lru=2.0.5=pyh29332c3_0
 async-timeout=5.0.1=pypi_0
-attrs=25.3.0=pypi_0
+attrs=25.3.0=pyh71513ae_0
+babel=2.17.0=pyhd8ed1ab_0
+beautifulsoup4=4.13.3=pyha770c72_0
+bleach=6.2.0=pyh29332c3_4
+bleach-with-css=6.2.0=h82add2a_4
 blis=1.2.0=pypi_0
+brotli-python=1.1.0=py310h9e98ed7_2
 bzip2=1.0.8=h2bbff1b_6
 ca-certificates=2025.2.25=haa95532_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
 catalogue=2.0.10=pypi_0
 certifi=2022.12.7=pypi_0
+cffi=1.17.1=py310ha8f682b_0
 charset-normalizer=2.1.1=pypi_0
 click=8.1.8=pypi_0
 cloudpathlib=0.21.0=pypi_0
@@ -29,55 +42,92 @@ cymem=2.0.11=pypi_0
 datasets=3.4.1=pypi_0
 debugpy=1.8.13=py310h9e98ed7_0
 decorator=5.2.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
 dill=0.3.8=pypi_0
+entrypoints=0.4=pyhd8ed1ab_1
 exceptiongroup=1.2.2=pyhd8ed1ab_1
 executing=2.1.0=pyhd8ed1ab_1
 fastrlock=0.8.3=pypi_0
 filelock=3.13.1=pypi_0
 fonttools=4.56.0=pypi_0
+fqdn=1.5.1=pyhd8ed1ab_1
 frozenlist=1.5.0=pypi_0
 fsspec=2024.6.1=pypi_0
+h11=0.14.0=pyhd8ed1ab_1
+h2=4.2.0=pyhd8ed1ab_0
+hpack=4.1.0=pyhd8ed1ab_0
+httpcore=1.0.7=pyh29332c3_1
+httpx=0.28.1=pyhd8ed1ab_0
 huggingface-hub=0.29.3=pypi_0
+hyperframe=6.1.0=pyhd8ed1ab_0
 idna=3.4=pypi_0
 importlib-metadata=8.6.1=pyha770c72_0
+importlib_resources=6.5.2=pyhd8ed1ab_0
 ipykernel=6.29.5=pyh4bbf305_0
 ipython=8.34.0=pyh9ab4c32_0
 ipywidgets=8.1.5=pypi_0
+isoduration=20.11.0=pyhd8ed1ab_1
 jedi=0.19.2=pyhd8ed1ab_1
 jinja2=3.1.4=pypi_0
 joblib=1.4.2=pypi_0
-jupyter_client=8.6.3=pyhd8ed1ab_1
+json5=0.10.0=pyhd8ed1ab_1
+jsonpointer=3.0.0=py310h5588dad_1
+jsonschema=4.23.0=pyhd8ed1ab_1
+jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
+jupyter-lsp=2.2.5=pyhd8ed1ab_1
+jupyter_client=7.4.9=pyhd8ed1ab_0
 jupyter_core=5.7.2=pyh5737063_1
+jupyter_events=0.12.0=pyh29332c3_0
+jupyter_server=2.15.0=pyhd8ed1ab_0
+jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+jupyterlab=4.3.6=pyhd8ed1ab_0
 jupyterlab-widgets=3.0.13=pypi_0
+jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+jupyterlab_server=2.27.3=pyhd8ed1ab_1
 kiwisolver=1.4.8=pypi_0
 krb5=1.21.3=hdf4eb48_0
 langcodes=3.5.0=pypi_0
 language-data=1.3.0=pypi_0
 libffi=3.4.4=hd77b12b_1
-libsodium=1.0.20=hc70643c_0
+libsodium=1.0.18=h8d14728_1
+llvmlite=0.44.0=pypi_0
 marisa-trie=1.2.1=pypi_0
 markdown-it-py=3.0.0=pypi_0
 markupsafe=2.1.5=pypi_0
 matplotlib=3.10.1=pypi_0
 matplotlib-inline=0.1.7=pyhd8ed1ab_1
 mdurl=0.1.2=pypi_0
+mistune=3.1.3=pyh29332c3_0
+more-itertools=10.6.0=pypi_0
 mpmath=1.3.0=pypi_0
 multidict=6.2.0=pypi_0
 multiprocess=0.70.16=pypi_0
 murmurhash=1.0.12=pypi_0
+nbclient=0.10.2=pyhd8ed1ab_0
+nbconvert-core=7.16.6=pyh29332c3_0
+nbformat=5.10.4=pyhd8ed1ab_1
 nest-asyncio=1.6.0=pyhd8ed1ab_1
 networkx=3.3=pypi_0
+notebook=7.3.3=pyhd8ed1ab_0
+notebook-shim=0.2.4=pyhd8ed1ab_1
+numba=0.61.0=pypi_0
 numpy=1.26.4=pypi_0
+openai-whisper=20240930=pypi_0
 opencv-python=4.11.0.86=pypi_0
 openssl=3.4.1=ha4e3fda_0
+overrides=7.7.0=pyhd8ed1ab_1
 packaging=24.2=pyhd8ed1ab_2
 pandas=2.2.3=pypi_0
+pandocfilters=1.5.0=pyhd8ed1ab_0
 parso=0.8.4=pyhd8ed1ab_1
 pickleshare=0.7.5=pyhd8ed1ab_1004
 pillow=11.0.0=pypi_0
 pip=25.0=py310haa95532_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
 platformdirs=4.3.7=pyh29332c3_0
 preshed=3.0.9=pypi_0
+prometheus_client=0.21.1=pyhd8ed1ab_0
 prompt-toolkit=3.0.50=pyha770c72_0
 propcache=0.3.0=pypi_0
 protobuf=6.30.1=pypi_0
@@ -85,29 +135,42 @@ psutil=7.0.0=py310ha8f682b_0
 pure_eval=0.2.3=pyhd8ed1ab_1
 py-cpuinfo=9.0.0=pypi_0
 pyarrow=19.0.1=pypi_0
+pycparser=2.22=pyh29332c3_1
 pydantic=2.10.6=pypi_0
 pydantic-core=2.27.2=pypi_0
 pygments=2.19.1=pyhd8ed1ab_0
 pyparsing=3.2.1=pypi_0
+pysocks=1.7.1=pyh09c184e_7
 python=3.10.16=h4607a30_1
 python-dateutil=2.9.0.post0=pyhff2d567_1
+python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+python-json-logger=2.0.7=pyhd8ed1ab_0
 python_abi=3.10=2_cp310
 pytz=2025.1=pypi_0
 pywin32=307=py310h9e98ed7_3
-pyyaml=6.0.2=pypi_0
-pyzmq=26.3.0=py310h656833d_0
+pywinpty=2.0.15=py310h9e98ed7_0
+pyyaml=6.0.2=py310h38315fa_2
+pyzmq=24.0.1=py310hcd737a0_1
+referencing=0.36.2=pyh29332c3_0
 regex=2024.11.6=pypi_0
-requests=2.32.3=pypi_0
+requests=2.32.3=pyhd8ed1ab_1
+rfc3339-validator=0.1.4=pyhd8ed1ab_1
+rfc3986-validator=0.1.1=pyh9f0ad1d_0
 rich=13.9.4=pypi_0
+rpds-py=0.23.1=py310h7c79e54_0
 safetensors=0.5.3=pypi_0
 scikit-learn=1.6.1=pypi_0
 scipy=1.15.2=pypi_0
 seaborn=0.13.2=pypi_0
+send2trash=1.8.3=pyh5737063_1
+sentencepiece=0.2.0=pypi_0
 seqeval=1.2.2=pypi_0
 setuptools=75.8.0=py310haa95532_0
 shellingham=1.5.4=pypi_0
 six=1.17.0=pyhd8ed1ab_0
 smart-open=7.1.0=pypi_0
+sniffio=1.3.1=pyhd8ed1ab_1
+soupsieve=2.5=pyhd8ed1ab_1
 spacy=3.8.4=pypi_0
 spacy-annotator=2.1.4=pypi_0
 spacy-legacy=3.0.12=pypi_0
@@ -116,11 +179,14 @@ sqlite=3.45.3=h2bbff1b_0
 srsly=2.5.1=pypi_0
 stack_data=0.6.3=pyhd8ed1ab_1
 sympy=1.13.1=pypi_0
+terminado=0.18.1=pyh5737063_0
 thinc=8.3.4=pypi_0
 threadpoolctl=3.6.0=pypi_0
 tiktoken=0.9.0=pypi_0
+tinycss2=1.4.0=pyhd8ed1ab_0
 tk=8.6.14=h0416ee5_0
 tokenizers=0.21.1=pypi_0
+tomli=2.2.1=pyhd8ed1ab_1
 torch=2.5.1+cu124=pypi_0
 torchaudio=2.5.1+cu124=pypi_0
 torchvision=0.20.1+cu124=pypi_0
@@ -129,11 +195,15 @@ tqdm=4.67.1=pypi_0
 traitlets=5.14.3=pyhd8ed1ab_1
 transformers=4.50.0=pypi_0
 typer=0.15.2=pypi_0
+types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
+typing-extensions=4.12.2=hd8ed1ab_1
 typing_extensions=4.12.2=pyha770c72_1
+typing_utils=0.1.0=pyhd8ed1ab_1
 tzdata=2025.2=pypi_0
 ucrt=10.0.22621.0=h57928b3_1
 ultralytics=8.3.69=pypi_0
 ultralytics-thop=2.0.14=pypi_0
+uri-template=1.3.0=pyhd8ed1ab_1
 urllib3=1.26.13=pypi_0
 vc=14.42=haa95532_4
 vc14_runtime=14.42.34438=hfd919c2_24
@@ -141,12 +211,19 @@ vs2015_runtime=14.42.34438=h7142326_24
 wasabi=1.1.3=pypi_0
 wcwidth=0.2.13=pyhd8ed1ab_1
 weasel=0.4.1=pypi_0
+webcolors=24.11.1=pyhd8ed1ab_0
+webencodings=0.5.1=pyhd8ed1ab_3
+websocket-client=1.8.0=pyhd8ed1ab_1
 wheel=0.45.1=py310haa95532_0
 widgetsnbextension=4.0.13=pypi_0
+win_inet_pton=1.1.0=pyh7428d3b_8
+winpty=0.4.3=4
 wrapt=1.17.2=pypi_0
 xxhash=3.5.0=pypi_0
 xz=5.6.4=h4754444_1
+yaml=0.2.5=h8ffe710_2
 yarl=1.18.3=pypi_0
-zeromq=4.3.5=ha9f60a1_7
+zeromq=4.3.4=h0e60522_1
 zipp=3.21.0=pyhd8ed1ab_1
 zlib=1.2.13=h8cc25b3_1
+zstandard=0.23.0=py310ha8f682b_1
