added comments and dividing code cells in tire prediction, changed disposition of some cells in N06_model_merging, merging to dev

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
         "{git,gitlens,git-graph}:/**/*.{md,csv,svg}": "default",
         "file:/**/*.parquet": "jupyter-data-wrangler"
     },
-    "CodeGPT.apiKey": "CodeGPT Plus Beta"
+    "CodeGPT.apiKey": "LM Studio"
 }
