--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -21,16 +21,20 @@ jobs:
           cd deepwiki-mcp
           npm install
 
-      - name: Start DeepWiki MCP
+      - name: Start DeepWiki MCP (HTTP mode)
         working-directory: deepwiki-mcp
         run: |
-          npm start &
+          # Ejecutar el CLI en modo HTTP en el puerto 3000
+          node ./bin/cli.mjs --http --port 3000 &
           sleep 10
 
       - name: Export Markdown from DeepWiki
         run: |
           mkdir -p docs-md
-          curl "http://localhost:3000/api/export?url=https://deepwiki.com/VforVitorio/F1_Strat_Manager" \
+          # Llamada POST al endpoint /mcp para obtener el Markdown
+          curl -X POST http://localhost:3000/mcp \
+            -H "Content-Type: application/json" \
+            -d '{"id":"req-1","action":"deepwiki_fetch","params":{"url":"https://deepwiki.com/VforVitorio/F1_Strat_Manager","mode":"aggregate"}}' \
             -o docs-md/f1-strat-manager.md
 
       - name: Checkout Wiki
